install prisma-kysely

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   ],
   "dependencies": {
     "@tsconfig/recommended": "1.0.2"
+  },
+  "devDependencies": {
+    "prisma-kysely": "1.5.0"
   }
 }
