--- a/web-api/package.json
+++ b/web-api/package.json
@@ -26,7 +26,9 @@
     "dotenv-expand": "10.0.0",
     "graphql": "16.7.1",
     "graphql-query-complexity": "0.12.0",
+    "kysely": "0.25.0",
     "luxon": "3.3.0",
+    "mysql2": "3.4.3",
     "passport": "0.6.0",
     "passport-http-bearer": "1.0.1",
     "passport-jwt": "4.0.1",
